# containmentci

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  action.yml  compose.yaml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  provider_request.yml
.github/workflows/: ci.yml  release.yml
containmentci/: __init__.py  api.py  cli.py  config.py  engine.py  evidence.py  lease.py  models.py  reporting.py  store.py
containmentci/providers/: __init__.py  base.py  github.py  http.py  simulation.py
docs/: architecture.md  ci-integration.md  github-real-world-test.md  releasing.md
examples/: ci-smoke.yaml  compromised-user.yaml  github-repository-access.yaml  http-provider.yaml
tests/: test_api.py  test_cli.py  test_engine.py  test_evidence.py  test_github_provider.py  test_http_provider.py  test_lease.py  test_live_safety.py  test_reporting.py  test_store.py
