[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "containmentci"
version = "0.2.0"
description = "Continuously prove that identity containment controls actually work."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "sonu07-star" }]
keywords = ["cybersecurity", "incident-response", "containment", "identity-security"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Security",
]
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "pydantic>=2.10,<3",
  "PyYAML>=6.0,<7",
  "typer>=0.15,<1",
  "uvicorn>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.11,<1",
]

[project.scripts]
containmentci = "containmentci.cli:app"

[project.urls]
Homepage = "https://github.com/sonu07-star/containmentci"
Issues = "https://github.com/sonu07-star/containmentci/issues"
Repository = "https://github.com/sonu07-star/containmentci"

[tool.hatch.build.targets.wheel]
packages = ["containmentci"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
